--- a/1.html
+++ b/1.html
@@ -97,8 +97,8 @@
             <input type="text" placeholder="Search..." />
         </div>
         <div class="icons">
-            <img src="D:/cart.png" onclick="redirectToCart()" alt="Cart" />
-            <img src="D:/profile.png" onclick="redirectToProfile()" alt="Profile" />
+            <img src="https://png.pngtree.com/element_our/20190531/ourmid/pngtree-shopping-cart-convenient-icon-image_1287807.jpg" onclick="redirectToCart()" alt="Cart" />
+            <img src="https://images.rawpixel.com/image_png_social_square/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIzLTAxL3JtNjA5LXNvbGlkaWNvbi13LTAwMi1wLnBuZw.png" onclick="redirectToProfile()" alt="Profile" />
         </div>
     </header>
 
