--- a/contact.html
+++ b/contact.html
@@ -45,12 +45,19 @@
             background-color: darkgreen;
         }
     </style>
+    <script>
+        function showAlert(event) {
+            event.preventDefault();
+            alert('Message Sent! We will get back to you soon.');
+            window.location.href="1.html";
+        }
+    </script>
 </head>
 <body>
     <div class="container">
         <h1>Contact Us</h1>
         <p>If you have any questions, feedback, or need assistance, please fill out the form below, and we will get back to you as soon as possible.</p>
-        <form action="submit_contact.php" method="POST">
+        <form action="submit_contact.php" method="POST" onsubmit="showAlert(event)">
             <label for="name">Your Name:</label>
             <input type="text" id="name" name="name" placeholder="Enter your name" required>
 
