--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <body>
     <div class="card">
         <h1>Bird Shop</h1>
-        <img src="D:/splash.png" alt="Splash Logo" />
+        <img src="https://i.etsystatic.com/18025753/r/il/361cf4/2979996709/il_fullxfull.2979996709_o4xg.jpg" alt="Splash Logo" />
         <input type="text" id="username" placeholder="Username" /><br>
         <input type="text" id="password" placeholder="Password" /><br>
         <button onclick="redirectToPage('1.html')">Login</button>
