--- a/profile.html
+++ b/profile.html
@@ -198,7 +198,7 @@
       });
     });
     function redirectToCart() {
-            window.location.href = "login.html";
+            window.location.href = "index.html";
         }
   </script>
 </body>
