--- a/profile.html
+++ b/profile.html
@@ -203,7 +203,7 @@
     });
 
     function redirectToCart() {
-      window.location.href = "index.html";
+      window.location.href = "login.html";
     }
   </script>
 </body>
