--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@
             border-radius: 5px;
             display: block;
         }
-        img {
-            height: 100px;
-            width: auto;
-            margin-bottom: 20px;
+            img {
+    height: 100px;
+    width: 100px;
+    border-radius: 50%; 
+    margin-bottom: 20px;
         }
     </style>
 </head>
