--- a/login.html
+++ b/login.html
@@ -50,7 +50,8 @@
         }
         img {
             height: 100px;
-            width: auto;
+            width: 100px;
+            border-radius:50%;
             margin-bottom: 20px;
         }
     </style>
