--- a/1.html
+++ b/1.html
@@ -21,8 +21,9 @@
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
         header img {
-            height: 50px;
-            width: auto;
+            height: 100px;
+            width: 100px;
+            border-radius:50%;
         }
         .search-bar input {
             padding: 10px;
