--- a/2.html
+++ b/2.html
@@ -102,6 +102,16 @@
             font-size: 16px;
             cursor: pointer;
         }
+        .description h2 {
+            margin: 0;
+            font-size: 1.5em;
+            text-align: center;
+        }
+        .description p {
+            margin: 10px 0 0;
+            color: #666;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
