--- a/2.html
+++ b/2.html
@@ -72,8 +72,9 @@
             gap: 10px;
         }
         .qty button {
-            width: 10px;
+            width: 30px;
             height: 30px;
+            border-radius:50%;
             color: green;
             font-size: 18px;
         }
@@ -101,6 +102,7 @@
             padding: 10px;
             font-size: 16px;
             cursor: pointer;
+            border-radius:50%;
         }
         .description h2 {
             margin: 0;
