--- a/2.html
+++ b/2.html
@@ -98,7 +98,7 @@
             gap: 10px;
         }
         .card button {
-            flex: center;
+            justify-content: center;
             padding: 10px;
             font-size: 16px;
             cursor: pointer;
