--- a/2.html
+++ b/2.html
@@ -96,6 +96,7 @@
         .card .buttons {
             display: flex;
             gap: 10px;
+            justify-content: center;
         }
         .card button {
             justify-content: center;
