--- a/2.html
+++ b/2.html
@@ -72,11 +72,12 @@
             gap: 10px;
         }
         .qty button {
-            width: 10px;
-            height: 10px;
+            width: 30px;
+            height: 30px;
             border-radius:50%;
             color: green;
             font-size: 18px;
+            justify-content: center;
         }
         .qty input {
             width: 50px;
@@ -97,6 +98,7 @@
             display: flex;
             gap: 10px;
             justify-content: center;
+            border-radius:50%;
         }
         .card button {
             justify-content: center;
