--- a/2.html
+++ b/2.html
@@ -66,23 +66,30 @@
             color: #ffd700;
         }
         .qty {
-            display: flex;
-            align-items: center;
-            margin-bottom: 15px;
-            gap: 10px;
-        }
-        .qty button {
-            width: 30px;
-            height: 30px;
-            border-radius:50%;
-            color: green;
-            font-size: 18px;
-            justify-content: center;
-        }
-        .qty input {
-            width: 50px;
-            text-align: center;
-        }
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+    margin: 0 auto; 
+    margin-bottom: 15px;
+    gap: 10px;
+}
+
+.qty button {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    color: green;
+    font-size: 18px;
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+}
+
+.qty input {
+    width: 50px;
+    text-align: center;
+}
+
         .price {
             font-size: 18px;
             color: green;
