--- a/2.html
+++ b/2.html
@@ -45,10 +45,10 @@
             padding: 5px 10px;
             font-size: 16px;
             cursor: pointer;
-            border: 2px solid #000;
             background-color: #f0f0f0;
             color: #000;
             transition: background-color 0.3s ease;
+            border-radius: 50%;
         }
         .star-rating {
             display: flex;
@@ -142,13 +142,7 @@
                 <h2>Parrot</h2>
                 <p>This is a parrot.</p>
             </div>
-            <div class="star-rating">
-                <span class="star" data-value="1">&#9733;</span>
-                <span class="star" data-value="2">&#9733;</span>
-                <span class="star" data-value="3">&#9733;</span>
-                <span class="star" data-value="4">&#9733;</span>
-                <span class="star" data-value="5">&#9733;</span>
-            </div>
+           
             <div class="price">Price: Rs.5000</div>
             <div class="delivery">In Stock</div>
             <div class="qty">
@@ -160,6 +154,14 @@
             <div class="buttons">
                 <button onclick="redirectt()">Buy</button>
                 <button onclick="toggle()">Add to Cart</button>
+            </div>
+             <div class="star-rating">
+                 <p>Rate the product....</p>
+                <span class="star" data-value="1">&#9733;</span>
+                <span class="star" data-value="2">&#9733;</span>
+                <span class="star" data-value="3">&#9733;</span>
+                <span class="star" data-value="4">&#9733;</span>
+                <span class="star" data-value="5">&#9733;</span>
             </div>
         </div>
 
