--- a/2.html
+++ b/2.html
@@ -156,7 +156,7 @@
                 <button onclick="toggle()">Add to Cart</button>
             </div>
              <div class="star-rating">
-                 <p>Rate the product....</p>
+                 <p>Rate the product....</p><br>
                 <span class="star" data-value="1">&#9733;</span>
                 <span class="star" data-value="2">&#9733;</span>
                 <span class="star" data-value="3">&#9733;</span>
