--- a/2.html
+++ b/2.html
@@ -48,7 +48,6 @@
             background-color: #f0f0f0;
             color: #000;
             transition: background-color 0.3s ease;
-         
         }
         .star-rating {
             display: flex;
@@ -105,14 +104,13 @@
             display: flex;
             gap: 10px;
             justify-content: center;
-            
+            border-radius:50%;
         }
         .card button {
             justify-content: center;
             padding: 10px;
             font-size: 16px;
             cursor: pointer;
-            border-radius:50%;
         }
         .description h2 {
             margin: 0;
@@ -152,7 +150,7 @@
                 <button id="increment">+</button>
             </div>
             <div class="delivery">Expected Delivery: Jan 12, 2025</div>
-            <div class="buttons">
+            <div class="buttonsss">
                 <button onclick="redirectt()">Buy</button>
                 <button onclick="toggle()">Add to Cart</button>
             </div>
