--- a/2.html
+++ b/2.html
@@ -48,6 +48,7 @@
             background-color: #f0f0f0;
             color: #000;
             transition: background-color 0.3s ease;
+            border-radius:50%;
         }
         .star-rating {
             display: flex;
@@ -105,6 +106,11 @@
             gap: 10px;
             justify-content: center;
             border-radius:50%;
+        }
+        .card .buttonsss {
+            display: flex;
+            gap: 10px;
+            justify-content: center;
         }
         .card button {
             justify-content: center;
