--- a/2.html
+++ b/2.html
@@ -106,11 +106,16 @@
             gap: 10px;
             justify-content: center;
             border-radius:50%;
+            height:30px;
+            width:30px;
         }
         .card .buttonsss {
             display: flex;
             gap: 10px;
             justify-content: center;
+            height:50px;
+            width:75px;
+            border-radius:25%;
         }
         .card button {
             justify-content: center;
