--- a/2.html
+++ b/2.html
@@ -21,7 +21,7 @@
             width: 400px;
             border-radius: 10px;
             padding: 20px;
-            background-color: #88a182;
+            background-color: #D9DDDC;
             box-shadow: 0 4px 8px rgba(139, 226, 145, 0.1);
             text-align: left;
         }
@@ -45,8 +45,8 @@
             margin: 20px auto;
         }
         .buttons button {
-            width: 50px;
-            height: 50px;
+            width: 30px;
+            height: 30px;
             border-radius: 50%; /* Circular buttons */
             font-size: 18px;
             cursor: pointer;
