--- a/3.html
+++ b/3.html
@@ -35,6 +35,8 @@
             display: flex;
             align-items: center;
             gap: 10px;
+            width:20px;
+            height:10px;
         }
         header .qty button {
             background-color: #fff;
