--- a/3.html
+++ b/3.html
@@ -35,8 +35,17 @@
             display: flex;
             align-items: center;
             gap: 10px;
-            width:20px;
-            height:10px;
+        }
+         header .qty input[type="text"] {
+            width: 20px;
+            height: 25px;
+            text-align: center;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 14px;
+        }
+        header .text {
+            margin-left: 10px;
         }
         header .qty button {
             background-color: #fff;
