--- a/login.html
+++ b/login.html
@@ -48,18 +48,18 @@
             border-radius: 5px;
             display: block;
         }
-        img {
-            height: 100px;
-            width: 100px;
-            border-radius:50%;
-            margin-bottom: 20px;
+            img {
+    height: 100px;
+    width: 100px;
+    border-radius: 50%; 
+    margin-bottom: 20px;
         }
     </style>
 </head>
 <body>
     <div class="card">
         <h1>Bird Shop</h1>
-        <img src="D:/splash.png" alt="Splash Logo" />
+        <img src="https://i.etsystatic.com/18025753/r/il/361cf4/2979996709/il_fullxfull.2979996709_o4xg.jpg" alt="Splash Logo" />
         <input type="text" id="username" placeholder="Username" /><br>
         <input type="text" id="password" placeholder="Password" /><br>
         <button onclick="redirectToPage('1.html')">Login</button>
