--- a/2.html
+++ b/2.html
@@ -158,9 +158,41 @@
                 <button id="btn3">3</button>
             </div>
             <div class="description">
-                <h2>Parrot</h2>
-                <p>This is a parrot.</p>
-            </div>
+    <h2>Parrot</h2>
+    <p>This is a parrot.</p>
+    <ul>
+        <li><strong>Feed:</strong> 
+            Parrots enjoy a varied diet that includes seeds, fruits (like apples, bananas, and berries), nuts (like almonds and walnuts), vegetables (such as carrots, broccoli, and spinach), and occasional grains. Clean, fresh water should always be available.
+        </li>
+        <li><strong>Shelter:</strong> 
+            Parrots need a spacious cage or aviary that allows for movement and flight. The cage should be made of non-toxic materials, include perches of varying sizes, and provide opportunities for climbing and playing. Ensure the environment is well-ventilated and free from drafts.
+        </li>
+        <li><strong>Behavior:</strong> 
+            Parrots are social and intelligent birds known for their ability to mimic sounds and human speech. They require mental stimulation, interaction, and plenty of toys to prevent boredom and destructive behaviors.
+        </li>
+        <li><strong>Care:</strong> 
+            Parrots need daily attention, interaction, and grooming. Regularly clean their cage, provide fresh food and water, and ensure they get sufficient out-of-cage time for exercise. Regular vet check-ups are also important.
+        </li>
+    </ul>
+    <p>
+        <a href="#" onclick="showMore(event)" style="color: blue; text-decoration: underline; cursor: pointer;">Click here for more</a>
+    </p>
+    <div id="moreDetails" style="display: none; margin-top: 10px;">
+        <p><strong>Details:</strong> 
+            Parrots are part of the Psittaciformes family, which includes over 400 species, such as macaws, cockatoos, and lovebirds. These birds are native to tropical and subtropical regions, including South America, Africa, and Asia. They are known for their vibrant plumage and long lifespans, with some species living up to 80 years.
+        </p>
+        <p><strong>Interesting Facts:</strong></p>
+        <ul>
+            <li>Some parrot species, like the African grey parrot, are known for their exceptional problem-solving abilities and vocabulary skills.</li>
+            <li>Parrots use their strong beaks not only for eating but also for climbing and exploring their environment.</li>
+            <li>They are highly social animals and often form strong bonds with their human caretakers.</li>
+            <li>In the wild, parrots live in flocks, which help them stay safe from predators and find food.</li>
+        </ul>
+        <p><strong>Threats:</strong> 
+            Many parrot species are endangered due to habitat destruction, illegal pet trade, and climate change. Conservation efforts are critical to protecting these beautiful birds.
+        </p>
+    </div>
+</div>
            
             <div class="price">Price: Rs.5000</div>
             <div class="delivery">In Stock</div>
@@ -243,6 +275,11 @@
                 }
             });
         });
+         function showMore(event) {
+        event.preventDefault(); 
+        const details = document.getElementById('moreDetails');
+        details.style.display = details.style.display === 'none' ? 'block' : 'none';
+    }
     </script>
 </body>
 </html>
