--- a/2.html
+++ b/2.html
@@ -194,7 +194,7 @@
     </div>
 </div>
            
-            <div class="price">Price: Rs.5000</div>
+             <div class="text">Rs. <span id="price">5000</span></div>
             <div class="delivery">In Stock</div>
             <div class="qty">
                 <button id="decrement">-</button>
