--- a/2.html
+++ b/2.html
@@ -240,23 +240,25 @@
         const quantityInput = document.getElementById('quantity');
         const totalDisplay = document.getElementById('total');
         function updateTotal() {
-    const qty = parseInt(quantityInput.value);
+    const qty = parseInt(quantityInput.value)||1;
     const total = qty * pricePerItem;
     totalDisplay.textContent = total.toFixed(2); // Update total to 2 decimal places
 }
-        decrementBtn.addEventListener('click', () => {
-            let qty = parseInt(quantityInput.value);
-            if (qty > 1) {
-                quantityInput.value = qty - 1;
-                updateTotal();
-            }
-        });
+       decrementBtn.addEventListener('click', () => {
+    let qty = parseInt(quantityInput.value) || 1;
+    if (qty > 1) {
+        qty -= 1;
+        quantityInput.value = qty;
+        updateTotal();
+    }
+});
 
-        incrementBtn.addEventListener('click', () => {
-            let qty = parseInt(quantityInput.value);
-            quantityInput.value = qty + 1;
-            updateTotal();
-        });
+incrementBtn.addEventListener('click', () => {
+    let qty = parseInt(quantityInput.value) || 1;
+    qty += 1;
+    quantityInput.value = qty;
+    updateTotal();
+});
 
         updateTotal();
         function redirectt() {
