--- a/2.html
+++ b/2.html
@@ -142,6 +142,9 @@
             color: #666;
             text-align: center;
         }
+        .text{
+            text-align: center;
+        }
     </style>
 </head>
 <body>
