--- a/2.html
+++ b/2.html
@@ -197,7 +197,7 @@
     </div>
 </div>
            
-             <div class="text">Rs. <div id="price">5000</div></div>
+             <div class="text">Rs.5000</div>
             <div class="delivery">In Stock</div>
             <div class="qty">
                 <button id="decrement">-</button>
