--- a/cart.html
+++ b/cart.html
@@ -80,6 +80,64 @@
         .cart-buttons button:hover {
             background-color: darkgreen;
         }
+
+        /* Media Queries for Responsiveness */
+        @media (max-width: 768px) {
+            .cart-container {
+                padding: 10px;
+            }
+
+            .cart-buttons {
+                flex-direction: column;
+                align-items: center;
+                gap: 10px;
+            }
+
+            .cart-buttons button {
+                width: 100%;
+            }
+
+            table, th, td {
+                font-size: 14px;
+            }
+
+            .qty input {
+                width: 30px;
+            }
+
+            .total-price {
+                font-size: 16px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            h1 {
+                font-size: 24px;
+            }
+
+            .cart-container {
+                width: 100%;
+                margin: 0;
+                padding: 10px;
+            }
+
+            table, th, td {
+                font-size: 12px;
+            }
+
+            .qty input {
+                width: 25px;
+            }
+
+            .total-price {
+                font-size: 14px;
+            }
+
+            .cart-buttons button {
+                font-size: 14px;
+                padding: 8px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -96,7 +154,7 @@
                 </tr>
             </thead>
             <tbody id="cart-items">
-                <tr>
+                <tr id="row-0">
                     <td>Parrot</td>
                     <td>Rs. 5000</td>
                     <td>
